feat: add persistent audit log storage